--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,6 +1,6 @@
 .btn {
   box-shadow: 0 .1875rem .1875rem 0 rgba(0,0,0,.1) !important;
-  padding: 1.25rem 2rem;
+  padding: 0.6rem 1.75rem;
   font-family: 'Varela Round';
   font-size: 80%;
   text-transform: uppercase;
