--- a/scss/_philanthropy.scss
+++ b/scss/_philanthropy.scss
@@ -1,6 +1,9 @@
 .philanthropy-section {
-  padding: 0 0 10rem 0;
+  padding: 0 0 5rem 0;
   img {
     margin-top: 1rem;
+  }
+  @media(max-width: 768px) {    
+    padding-bottom: 0rem;
   }
 }
