--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -1,5 +1,5 @@
 .sections {
-  padding: 10rem 0;  
+  padding: 5rem 0;  
   .featured-text {
     padding: 2rem;
     @media (min-width: 992px) {
@@ -18,5 +18,9 @@
         width: 30%;
       }
     }
+  }
+  @media(max-width: 768px) {
+    padding-top: 4rem;
+    padding-bottom: 1rem;
   }
 }
